fix: better contrast and fixed aria attributes

--- a/assets/scss/01-settings/_colors.scss
+++ b/assets/scss/01-settings/_colors.scss
@@ -1,4 +1,4 @@
-$primary: #ef5d60;
+$primary: #ff6569;
 
 :root {
   color-scheme: dark light;
@@ -11,15 +11,15 @@ $primary: #ef5d60;
   --magnolia: #f5f0f6;
 
   // /* SCSS Gradient */
-  $gradient-top: linear-gradient(0deg, #ef5d60ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
-  $gradient-right: linear-gradient(90deg, #ef5d60ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
-  $gradient-bottom: linear-gradient(180deg, #ef5d60ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
-  $gradient-left: linear-gradient(270deg, #ef5d60ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
-  $gradient-top-right: linear-gradient(45deg, #ef5d60ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
-  $gradient-bottom-right: linear-gradient(135deg, #ef5d60ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
-  $gradient-top-left: linear-gradient(225deg, #ef5d60ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
-  $gradient-bottom-left: linear-gradient(315deg, #ef5d60ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
-  $gradient-radial: radial-gradient(#ef5d60ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
+  $gradient-top: linear-gradient(0deg, #ff6569ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
+  $gradient-right: linear-gradient(90deg, #ff6569ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
+  $gradient-bottom: linear-gradient(180deg, #ff6569ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
+  $gradient-left: linear-gradient(270deg, #ff6569ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
+  $gradient-top-right: linear-gradient(45deg, #ff6569ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
+  $gradient-bottom-right: linear-gradient(135deg, #ff6569ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
+  $gradient-top-left: linear-gradient(225deg, #ff6569ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
+  $gradient-bottom-left: linear-gradient(315deg, #ff6569ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
+  $gradient-radial: radial-gradient(#ff6569ff, #311847ff, #720e07ff, #f1dedcff, #f5f0f6ff);
 
   --duration: 0.5s;
   --timing: ease;
