--- a/assets/scss/05-prose/_prose.scss
+++ b/assets/scss/05-prose/_prose.scss
@@ -5,7 +5,7 @@
 a {
   box-decoration-break: clone;
 
-  @extend .link-underline-secondary;
+  @extend .link-underline-primary;
   @extend .link-offset-2;
 
   @include word-wrap;
